crates/strider-analyze/tests/snapshots/v2__ppc64le__floats__f64_compare.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "9" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="φ Val", shape=house, fillcolor="#163030"];
  "9" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="φ Mem", shape=house, fillcolor="#163030"];
  "9" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "19" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "25" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "22" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "22" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "34" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "37" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "45" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "14" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "46" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "29" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "49" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "51" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "48" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "58" -> "56" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "45" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "61" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "48" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "62" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "67" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "14" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "69" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "29" -> "76" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "67" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "77" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "79" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "79" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "81" -> "79" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "81" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "76" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "82" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "84" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "84" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "86" -> "84" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "86" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "73" -> "86" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "86" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "87" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "88" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "87" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "89" -> "87" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "89" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "76" -> "89" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "89" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
